--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ body
 {
 	width: 550px;
 	height: 900px;
-	position: relative;
+	position: fixed;
+	:2;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
